update square dodger

--- a/bodge_the_squares.html
+++ b/bodge_the_squares.html
@@ -8,39 +8,45 @@
   <link rel="stylesheet" href="./css/dark.css">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
      crossorigin="anonymous"></script>
-     <meta name="google-adsense-account" content="ca-pub-2810189862013244">
+  <meta name="google-adsense-account" content="ca-pub-2810189862013244">
 </head>
 <body>
 
-    <a href="index.html" style="
-        position: fixed;
-        bottom: 15px;
-        left: 15px;
-        background-color: #444;
-        color: white;
-        padding: 10px 15px;
-        border-radius: 5px;
-        text-decoration: none;
-        font-family: Arial, sans-serif;
-        z-index: 9999;
-    ">🏠 Menu</a>
-   
-  <h1>⬜🟥Square Dodger🟥⬜</h1>
+<a href="index.html" style="
+    position: fixed;
+    bottom: 15px;
+    left: 15px;
+    background-color: #444;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-family: Arial, sans-serif;
+    z-index: 9999;
+">🏠 Menu</a>
 
-    
-    
-  <div id="theme-toggle-container">
+<h1>⬜🟥Square Dodger🟥⬜</h1>
+
+<div id="theme-toggle-container">
   <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
 </div>
-    <div id="countdown"></div>
-    <canvas id="game" width="300" height="500"></canvas>
-    <button id="start">Start Game</button>
 
-    <div id="score">Score: 0</div>
-    <div id="bestScore">Best: 0</div>
-    <button id="restart">Restart</button>
-  <script src="./js/antiadblock.js"></script>
-  <script>
+<div id="countdown"></div>
+<canvas id="game" width="300" height="500"></canvas>
+<button id="start">Start Game</button>
+
+<div id="score">Score: 0</div>
+<div id="bestScore">Best: 0</div>
+<button id="restart">Restart</button>
+
+<!-- Joystick mobile -->
+<div id="joystick-container" style="display:none; position: fixed; bottom: 50px; left: 50%; transform: translateX(-50%); z-index: 9999;">
+  <button id="left-btn" style="font-size: 30px; margin: 0 10px;">⬅️</button>
+  <button id="right-btn" style="font-size: 30px; margin: 0 10px;">➡️</button>
+</div>
+
+<script src="./js/antiadblock.js"></script>
+<script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 const startBtn = document.getElementById("start");
@@ -114,7 +120,7 @@ function update() {
   if (keys["ArrowLeft"] && player.x > 0) player.x -= player.speed;
   if (keys["ArrowRight"] && player.x + player.w < canvas.width) player.x += player.speed;
 
-  // Update and draw enemies
+  // Draw enemies
   ctx.fillStyle = "#e74c3c";
   enemies.forEach((enemy, i) => {
     enemy.y += gravityDown ? speed : -speed;
@@ -142,63 +148,90 @@ function update() {
       cancelAnimationFrame(gameLoop);
     }
 
-    // Remove enemy if off screen
+    // Remove enemy
     if ((gravityDown && enemy.y > canvas.height) || (!gravityDown && enemy.y + enemy.h < 0)) {
       enemies.splice(i, 1);
       score++;
       scoreEl.textContent = `Score: ${score}`;
 
-      // Augmenter la vitesse tous les 10 points
       if (score % 10 === 0) speed += 0.2;
-
-      // Inverser la gravité tous les 100 points
       if (score % 50 === 0 && score !== 0 && score !== lastGravitySwitch) {
         gravityDown = !gravityDown;
         lastGravitySwitch = score;
-
-        // Déplacer le joueur à l'opposé selon la nouvelle gravité
         player.y = gravityDown
-          ? canvas.height - player.h - 20 // bas
-          : 20; // haut
+          ? canvas.height - player.h - 20
+          : 20;
       }
-
     }
   });
 
-  // Spawn enemy aléatoirement
-  if (Math.random() < 0.02) { // 2% de chance par frame
-  spawnEnemy();
-}
+  if (Math.random() < 0.02) {
+    spawnEnemy();
+  }
 
   gameLoop = requestAnimationFrame(update);
 }
 
+// Clavier
 document.addEventListener("keydown", (e) => {
   keys[e.key] = true;
-
   if (isGameOver && (e.key === " " || e.key === "Enter")) {
     resetGame(true);
   }
 });
-
 document.addEventListener("keyup", (e) => (keys[e.key] = false));
+
+// Boutons
 restartBtn.addEventListener("click", () => resetGame(true));
 startBtn.addEventListener("click", () => resetGame(true));
 
-// Lancer le jeu en attente
-resetGame();
+// Détection mobile + joystick
+function isMobileDevice() {
+  return (typeof window.orientation !== "undefined") || navigator.userAgent.toLowerCase().includes("mobile");
+}
 
-  </script>
-  <script src="./js/dark.js"></script>
-  <script src="./js/stealth.js"></script>
+if (isMobileDevice()) {
+  const joystick = document.getElementById("joystick-container");
+  joystick.style.display = "block";
+
+  const leftBtn = document.getElementById("left-btn");
+  const rightBtn = document.getElementById("right-btn");
+
+  let leftInterval, rightInterval;
+
+  leftBtn.addEventListener("touchstart", () => {
+    keys["ArrowLeft"] = true;
+    leftInterval = setInterval(() => keys["ArrowLeft"] = true, 100);
+  });
+  leftBtn.addEventListener("touchend", () => {
+    keys["ArrowLeft"] = false;
+    clearInterval(leftInterval);
+  });
+
+  rightBtn.addEventListener("touchstart", () => {
+    keys["ArrowRight"] = true;
+    rightInterval = setInterval(() => keys["ArrowRight"] = true, 100);
+  });
+  rightBtn.addEventListener("touchend", () => {
+    keys["ArrowRight"] = false;
+    clearInterval(rightInterval);
+  });
+}
+
+// Init
+resetGame();
+</script>
+
+<script src="./js/dark.js"></script>
+<script src="./js/stealth.js"></script>
 <script type="text/javascript">
-	atOptions = {
-		'key' : 'c86e387157f60d5125b9bd69ed6b7980',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
+  atOptions = {
+    'key': 'c86e387157f60d5125b9bd69ed6b7980',
+    'format': 'iframe',
+    'height': 60,
+    'width': 468,
+    'params': {}
+  };
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/c86e387157f60d5125b9bd69ed6b7980/invoke.js"></script>
 </body>
