--- a/everest.html
+++ b/everest.html
@@ -19,25 +19,32 @@
       display: block;
       border: 2px solid white;
     }
+    h2{
+      margin-top: 200px;
+    }
     #click-btn, #restart {
       display: block;
       margin: 10px auto;
       padding: 10px 20px;
       font-size: 1.2rem;
     }
-    #progression, #best, #timer {
+    #progression, #best, #timer, #cps {
       text-align: center;
       font-size: 1.2rem;
       color: white;
     }
     #shop {
       display: flex;
-      gap: 50px;
       justify-content: center;
+      flex-wrap:wrap;
+      margin: 0 auto;
+      max-width: 80%;
     }
+
     #shop div button {
       width: 400px;
     }
+
   </style>
 </head>
 <body>
@@ -59,12 +66,15 @@
 <div id="theme-toggle-container">
   <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
 </div>
+<h1>Extreme Climber !</h1>
 <h2>Boutique</h2>
-<div id="shop" style="color:white; max-width: 300px;"></div>
+<div id="shop"></div>
 
 <div id="timer">⏱️ Temps : 0s</div>
+<div id="cps">🔥 CPS : 0</div>
 <canvas id="game" width="1000" height="800"></canvas>
 <button id="click-btn">🖱️ Clique pour grimper !</button>
+
 <div id="progression"></div>
 <div id="best"></div>
 <button id="restart" style="display:none;">🔄 Recommencer</button>
@@ -76,6 +86,7 @@ const clickBtn = document.getElementById("click-btn");
 const progression = document.getElementById("progression");
 const bestEl = document.getElementById("best");
 const restartBtn = document.getElementById("restart");
+const cpsEl = document.getElementById("cps");
 
 const climberImg = new Image();
 climberImg.src = "sticman.png";
@@ -92,7 +103,7 @@ let autoClickInterval2 = null;
 let currentClicks = parseInt(localStorage.getItem("climb_clicks")) || 0;
 let climberY = canvas.height - 40;
 let clickHistory = [];
-let flipped = false; // ➕ Pour effet miroir
+let flipped = false;
 
 function formatTime(ms) {
   const totalSeconds = Math.floor(ms / 1000);
@@ -155,24 +166,64 @@ function updateProgress() {
   }
 }
 
+let recentClicks = [];
+
+function updateCPS() {
+  const now = Date.now();
+  recentClicks = recentClicks.filter(t => now - t < 1000);
+
+  if (recentClicks.length > 1) {
+    const intervals = [];
+    for (let i = 1; i < recentClicks.length; i++) {
+      intervals.push(recentClicks[i] - recentClicks[i - 1]);
+    }
+    const avgInterval = intervals.reduce((a, b) => a + b, 0) / intervals.length;
+    const cps = 1000 / avgInterval;
+    cpsEl.textContent = `🔥 CPS : ${cps.toFixed(2)}`;
+  } else {
+    cpsEl.textContent = `🔥 CPS : ${recentClicks.length.toFixed(2)}`;
+  }
+}
+
+
+
+setInterval(updateCPS, 200);
+
 clickBtn.addEventListener("click", () => {
   const now = Date.now();
   clickHistory = clickHistory.filter(t => now - t < 1000);
   if (clickHistory.length >= 15) {
-    alert("Tu cliques trop vite poto ! Max 5/sec 🧤");
+    alert("Tu cliques trop vite poto ! Max 15/sec 🧤");
     return;
   }
 
-  clickHistory.push(now);
   let increment = doubleClickActive ? 2 : 1;
+
+  // Malus actifs
+  const malus = clickBtn.dataset.malus;
+
+  if (malus === "halfClicks") {
+    increment = Math.max(1, Math.floor(increment / 2));
+  }
+
+  if (malus === "slowClicks") {
+    const lastClick = parseInt(clickBtn.dataset.lastClick || "0");
+    if (now - lastClick < 500) return;
+    clickBtn.dataset.lastClick = now;
+  }
+
+  clickHistory.push(now);
+  recentClicks.push(now);
+
   currentClicks += increment;
-  flipped = !flipped; // ➕ Inverse à chaque clic
+  flipped = !flipped;
 
   localStorage.setItem("climb_clicks", currentClicks);
   if (currentClicks >= TOTAL_CLICKS && !timerInterval) clearInterval(timerInterval);
   updateProgress();
   renderShop();
 });
+
 
 restartBtn.addEventListener("click", () => {
   currentClicks = 0;
@@ -185,9 +236,25 @@ restartBtn.addEventListener("click", () => {
   timerInterval = null;
   clickBtn.disabled = false;
   restartBtn.style.display = "none";
+
+  // --- Reset upgrades ---
+  purchasedItems = [];
+  localStorage.removeItem("climb_purchases");
+
+  doubleClickActive = false;
+  clearInterval(autoClickInterval1);
+  autoClickInterval1 = null;
+  clearInterval(autoClickInterval2);
+  autoClickInterval2 = null;
+
+  delete clickBtn.dataset.malus;
+  localStorage.removeItem("climb_malus");
+
   updateProgress();
+  renderShop();
   startTimer();
 });
+
 
 const shopItems = [
   {
@@ -226,7 +293,55 @@ const shopItems = [
         }, 2000);
       }
     }
+  },
+  {
+  id: "fakeUpgrade1",
+  name: "Gants ",
+  description: "Augmente la stabilité",
+  cost: 500,
+  effect: () => {
+    clickBtn.dataset.malus = "halfClicks";
+    localStorage.setItem("climb_malus", "halfClicks");
   }
+
+},
+{
+  id: "fakeUpgrade2",
+  name: "Grip",
+  description: "Améliore l'adhérence",
+  cost: 800,
+  effect: () => {
+    clickBtn.dataset.malus = "slowClicks";
+    localStorage.setItem("climb_malus", "slowClicks");
+  }
+
+},
+{
+  id: "antidote1",
+  name: "Dissolvant magique",
+  description: "Neutralise Les Gants",
+  cost: 1000,
+  effect: () => {
+  if (clickBtn.dataset.malus === "halfClicks") {
+    delete clickBtn.dataset.malus;
+    localStorage.removeItem("climb_malus");
+  }
+}
+
+},
+{
+  id: "antidote2",
+  name: "Dégrippant Extrême",
+  description: "Enlève les effets du Grip",
+  cost: 1500,
+  effect: () => {
+    if (clickBtn.dataset.malus === "slowClicks") {
+      delete clickBtn.dataset.malus;
+      localStorage.removeItem("antidote2")
+    }
+  }
+}
+
 ];
 
 let purchasedItems = JSON.parse(localStorage.getItem("climb_purchases")) || [];
@@ -262,6 +377,11 @@ function renderShop() {
 drawClimber();
 updateProgress();
 renderShop();
+const savedMalus = localStorage.getItem("climb_malus");
+if (savedMalus) {
+  clickBtn.dataset.malus = savedMalus;
+}
+
 purchasedItems.forEach(id => {
   const item = shopItems.find(i => i.id === id);
   if (item) item.effect();
@@ -271,16 +391,15 @@ startTimer();
 
 <script src="./js/dark.js"></script>
 <script src="./js/stealth.js"></script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
-     crossorigin="anonymous"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244" crossorigin="anonymous"></script>
 <script type="text/javascript">
-	atOptions = {
-		'key' : 'c86e387157f60d5125b9bd69ed6b7980',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
+  atOptions = {
+    'key': 'c86e387157f60d5125b9bd69ed6b7980',
+    'format': 'iframe',
+    'height': 60,
+    'width': 468,
+    'params': {}
+  };
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/c86e387157f60d5125b9bd69ed6b7980/invoke.js"></script>
 
