--- a/everest.html
+++ b/everest.html
@@ -88,7 +88,16 @@
   </style>
 </head>
 <body>
-
+<script type="text/javascript">
+  atOptions = {
+    'key': 'c86e387157f60d5125b9bd69ed6b7980',
+    'format': 'iframe',
+    'height': 60,
+    'width': 468,
+    'params': {}
+  };
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c86e387157f60d5125b9bd69ed6b7980/invoke.js"></script>
 <a href="index.html" style="
   position: fixed;
   bottom: 15px;
@@ -106,7 +115,6 @@
 <div id="theme-toggle-container">
   <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
 </div>
-<h1>Extreme Climber !</h1>
 <h2>Boutique</h2>
 <div id="shop"></div>
 
