--- a/ads.html
+++ b/ads.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!--Social bar-->
-<script type='text/javascript' src='//pl26687779.profitableratecpm.com/26/79/48/2679483a59f6f23042e700a887622464.js'></script>
+<!-- <script type='text/javascript' src='//pl26687779.profitableratecpm.com/26/79/48/2679483a59f6f23042e700a887622464.js'></script> -->
     <!--native banner-->
 <script async="async" data-cfasync="false" src="//pl26687627.profitableratecpm.com/6e821405bb7a31d3e0e0addb3e3f0612/invoke.js"></script>
 <div id="container-6e821405bb7a31d3e0e0addb3e3f0612"></div>
