--- a/everest.html
+++ b/everest.html
@@ -34,7 +34,9 @@
     h1, h2 {
       margin: 20px 0;
     }
-
+    iframe{
+      max-width: 90%;
+    }
     #click-btn, #restart {
       display: block;
       margin: 10px auto;
@@ -436,7 +438,7 @@ startTimer();
     'key': 'c86e387157f60d5125b9bd69ed6b7980',
     'format': 'iframe',
     'height': 60,
-    'width': 468,
+    // 'width': 468,
     'params': {}
   };
 </script>
