--- a/everest.html
+++ b/everest.html
@@ -438,7 +438,7 @@ startTimer();
     'key': 'c86e387157f60d5125b9bd69ed6b7980',
     'format': 'iframe',
     'height': 60,
-    // 'width': 468,
+    'width': 468,
     'params': {}
   };
 </script>
