--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810189862013244"
      crossorigin="anonymous"></script>
      <meta name="google-adsense-account" content="ca-pub-2810189862013244">
-<title>🎮 Bored at school</title>
+</script>
 
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/dark.css">
+    <title>🎮 Bored at school</title>
 </head>
+
 <body>
+
+
   <div id="theme-toggle-container">
   <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
 </div>
@@ -116,7 +120,7 @@
   }
 </script>
 
-<script src="./js/antiadblock.js"></script>
+
 <!-- AdSense Banner -->
 <div class="ad-banner">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -127,9 +131,10 @@
        data-ad-format="auto"
        data-full-width-responsive="true"></ins>
   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-  <script src="./js/dark.js"></script>
+
 
 </div>
+  <script src="./js/dark.js"></script>
 <script type="text/javascript">
 	atOptions = {
 		'key' : 'c86e387157f60d5125b9bd69ed6b7980',
@@ -140,5 +145,6 @@
 	};
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/c86e387157f60d5125b9bd69ed6b7980/invoke.js"></script>
+<script src="./js/antiadblock.js"></script>
 </body>
 </html>
