anti adblock all page

--- a/ads.html
+++ b/ads.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ADS PAGE FOR TEST</title>
 </head>
 <body>
     <!--Social bar-->
@@ -36,5 +36,6 @@
 	};
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/c86e387157f60d5125b9bd69ed6b7980/invoke.js"></script>
+<script src="./js/antiadblock.js"></script>
 </body>
 </html>
