--- a/bodge_the_squares.html
+++ b/bodge_the_squares.html
@@ -260,5 +260,6 @@ resetGame();
   };
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/c86e387157f60d5125b9bd69ed6b7980/invoke.js"></script>
+<script src="./js/antiadblock.js"></script>
 </body>
 </html>
