--- a/everest.html
+++ b/everest.html
@@ -34,6 +34,9 @@
     h1, h2 {
       margin: 20px 0;
     }
+    .midle{
+      display: flex;
+    }
     iframe{
       max-width: 90%;
     }
@@ -113,7 +116,15 @@
 
 <div id="timer">⏱️ Temps : 0s</div>
 <div id="cps">🔥 CPS : 0</div>
+<div class="midle">
+<script async="async" data-cfasync="false" src="//pl26687627.profitableratecpm.com/6e821405bb7a31d3e0e0addb3e3f0612/invoke.js"></script>
+<div id="container-6e821405bb7a31d3e0e0addb3e3f0612"></div>
 <canvas id="game" width="1000" height="800"></canvas>
+<script async="async" data-cfasync="false" src="//pl26687627.profitableratecpm.com/6e821405bb7a31d3e0e0addb3e3f0612/invoke.js"></script>
+<div id="container-6e821405bb7a31d3e0e0addb3e3f0612"></div>
+
+</div>
+
 <button id="click-btn">🖱️ Clique pour grimper !</button>
 
 <div id="progression"></div>
