--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <a class="game-link" href="how_many_seconds.html">⏱️ How Many Seconds?</a>
 <a class="game-link" href="réflexes_clavier.html">⌨️ Reflex Typer</a>
 <a class="game-link" href="bodge_the_squares.html">🟥 Square Dodger</a>
+<!-- <a class="game-link" href="everest.html">🗻 Extreme Climber</a> -->
 
 <div id="preview"></div>  
 <div id="hint">💡 Press <strong>F9</strong> to toggle stealth mode. Press <strong>Escape</strong> to exit it.</div>
