--- a/everest.html
+++ b/everest.html
@@ -35,7 +35,8 @@
       margin: 20px 0;
     }
     .midle{
-      display: flex;
+      display: grid;
+      grid-template-columns: 1fr 5fr 1fr;
     }
     iframe{
       max-width: 90%;
