responsive for all page

--- a/how_many_seconds.html
+++ b/how_many_seconds.html
@@ -34,7 +34,7 @@
   <button id="theme-toggle" class="dark">🌙 Mode sombre</button>
 </div>
 <h1>How many seconds ?</h1>
-<div id="container">
+<div id="container" class="main">
 <h2>
     ⏱️ Click after the selected time
    </h2>
