--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <a class="game-link" href="réflexes_clavier.html">⌨️ Reflex Typer</a>
   <a class="game-link" href="bodge_the_squares.html">🟥 Square Dodger</a>
   <a class="game-link" href="everest.html">🗻 Extreme Climber</a>
+  <a class="game-link" href="simon.html">⬟ Super Simon</a>
+
 </div>
 
 <div id="preview"></div>  
