--- a/gravityjump.html
+++ b/gravityjump.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gravity Jump</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -23,37 +23,46 @@
       cursor: pointer;
     }
     #mobileControls {
+    display: none; /* on cache par défaut */
     position: absolute;
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    display: flex;
     gap: 20px;
     }
 
     #mobileControls button {
-    width: 80px;
-    height: 80px;
-    font-size: 32px;
-    border: none;
-    border-radius: 50%;
-    background-color: #0f0;
-    color: #000;
-    box-shadow: 0 0 10px #0f0;
-    cursor: pointer;
+      width: 80px;
+      height: 80px;
+      font-size: 32px;
+      border: none;
+      border-radius: 50%;
+      background-color: #0f0;
+      color: #000;
+      box-shadow: 0 0 10px #0f0;
+      cursor: pointer;
     }
-
+    #leftBtn{
+        background-image: url(./left.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    #rightBtn{
+        background-image: url(./right.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
   </style>
 </head>
 <body>
+
 <canvas id="game"></canvas>
-<!-- Buttons for mobile -->
 <div id="mobileControls">
-  <button id="leftBtn">⬅️</button>
-  <button id="rightBtn">➡️</button>
+  <button id="leftBtn"></button>
+  <button id="rightBtn"></button>
 </div>
-
-
 <button id="restartBtn" onclick="restartGame()">Rejouer</button>
 
 <script>
@@ -63,8 +72,23 @@ canvas.width = 400;
 canvas.height = 600;
 
 const restartBtn = document.getElementById('restartBtn');
+const leftBtn = document.getElementById('leftBtn');
+const rightBtn = document.getElementById('rightBtn');
 
 let gravity, jumpPower, score, bestScore, platforms, safeStart, safeStartDuration, countdown, countdownTimer, gameOver, player;
+let keysPressed = {};
+let touchLeft = false;
+let touchRight = false;
+// Affiche les boutons mobiles seulement si on est sur un appareil mobile
+function isMobile() {
+  return /Android|iPhone|iPad|iPod|Opera Mini|IEMobile|WPDesktop/i.test(navigator.userAgent);
+}
+
+if (isMobile()) {
+  document.getElementById('mobileControls').style.display = 'flex';
+}
+
+
 
 function initGame() {
   gravity = 0.4;
@@ -100,8 +124,7 @@ function createPlatform(y, ensureSafe = false) {
   let x;
   if (ensureSafe) {
     x = player.x - width / 2 + player.width / 2;
-    if (x < 0) x = 0;
-    if (x + width > canvas.width) x = canvas.width - width;
+    x = Math.max(0, Math.min(x, canvas.width - width));
   } else {
     x = Math.random() * (canvas.width - width);
   }
@@ -114,9 +137,9 @@ function drawPlayer() {
   ctx.fillRect(player.x, player.y, player.width, player.height);
 }
 
-function drawPlatform(platform) {
+function drawPlatform(p) {
   ctx.fillStyle = '#888';
-  ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
+  ctx.fillRect(p.x, p.y, p.width, p.height);
 }
 
 function update() {
@@ -133,7 +156,8 @@ function update() {
     }
     ctx.fillStyle = '#fff';
     ctx.font = '48px Arial';
-    ctx.fillText(countdown > 0 ? countdown : "Go!", canvas.width / 2 - 40, canvas.height / 2);
+    ctx.textAlign = 'center';
+    ctx.fillText(countdown > 0 ? countdown : "Go!", canvas.width / 2, canvas.height / 2);
   } else {
     safeStart = false;
   }
@@ -145,8 +169,7 @@ function update() {
   player.y += player.vy;
   player.x += player.vx;
 
-  if (player.x < 0) player.x = 0;
-  if (player.x + player.width > canvas.width) player.x = canvas.width - player.width;
+  player.x = Math.max(0, Math.min(player.x, canvas.width - player.width));
 
   if (player.y > canvas.height) {
     gameOver = true;
@@ -156,7 +179,8 @@ function update() {
     }
     ctx.fillStyle = '#f00';
     ctx.font = '32px Arial';
-    ctx.fillText('Game Over', 120, canvas.height / 2);
+    ctx.textAlign = 'center';
+    ctx.fillText('Game Over', canvas.width / 2, canvas.height / 2);
     restartBtn.style.display = 'block';
     return;
   }
@@ -169,9 +193,8 @@ function update() {
   }
 
   platforms = platforms.filter(p => p.y < canvas.height);
-
   while (platforms.length < 10) {
-    let lastY = platforms.reduce((max, p) => p.y < max ? p.y : max, canvas.height);
+    let lastY = Math.min(...platforms.map(p => p.y));
     platforms.push(createPlatform(lastY - 60));
   }
 
@@ -185,7 +208,7 @@ function update() {
       player.x + player.width > p.x &&
       player.x < p.x + p.width &&
       player.y + player.height >= p.y &&
-      player.y + player.height <= p.y + p.height
+      player.y + player.height <= p.y + p.height + 5
     ) {
       player.vy = jumpPower;
     }
@@ -194,6 +217,7 @@ function update() {
   drawPlayer();
   ctx.fillStyle = '#fff';
   ctx.font = '16px Arial';
+  ctx.textAlign = 'left';
   ctx.fillText("Score: " + score, 10, 20);
   ctx.fillText("Best: " + bestScore, 10, 40);
 
@@ -201,21 +225,14 @@ function update() {
 }
 
 document.addEventListener('keydown', e => {
-  if (e.key === 'ArrowLeft') player.vx = -4;
-  if (e.key === 'ArrowRight') player.vx = 4;
+  keysPressed[e.key] = true;
   if (e.key === ' ' && player.vy > 0) player.vy = jumpPower;
 });
 
 document.addEventListener('keyup', e => {
+  keysPressed[e.key] = false;
   if (e.key === 'ArrowLeft' || e.key === 'ArrowRight') player.vx = 0;
 });
-
-// Touch controls
-const leftBtn = document.getElementById('leftBtn');
-const rightBtn = document.getElementById('rightBtn');
-
-let touchLeft = false;
-let touchRight = false;
 
 leftBtn.addEventListener('touchstart', e => {
   e.preventDefault();
@@ -225,7 +242,6 @@ leftBtn.addEventListener('touchend', e => {
   e.preventDefault();
   touchLeft = false;
 });
-
 rightBtn.addEventListener('touchstart', e => {
   e.preventDefault();
   touchRight = true;
@@ -240,8 +256,6 @@ setInterval(() => {
   else if (keysPressed['ArrowRight'] || touchRight) player.vx = 4;
   else player.vx = 0;
 }, 1000 / 60);
-
-
 
 function restartGame() {
   restartBtn.style.display = 'none';
